# Chozo

./: .gitignore  CMakeLists.txt  README.md  install.sh  vcpkg.json
ChozoEditor/: CMakeLists.txt
ChozoEditor/assets/Shaders/: BRDF.glsl.frag  Basic.glsl.frag  Circle.glsl.vert  CubemapPreview.glsl.frag  CubemapSampler.glsl.frag  CubemapSampler.glsl.vert  Depth.glsl.frag  GBuffer.glsl.frag  Line.glsl.vert  PBR.glsl.frag  Phong.glsl.frag  Phong.glsl.vert  PhongLight.glsl.frag  PreethamSky.glsl.frag  PreethamSky.glsl.vert  Prefiltered.glsl.frag  SceneComposite.glsl.frag  Shader.glsl.frag  Shader.glsl.vert  Skybox.glsl.frag  Skybox.glsl.vert  Texture.glsl.vert
ChozoEditor/assets/scenes/: Cube.chozo  Dev  Example.chozo  PBR  PBR2  Phong  Untitled  test.chozo
ChozoEditor/assets/shaders/: Shader.glsl.frag  Shader.glsl.vert
ChozoEditor/resources/shaders/: BRDF.glsl.frag  Basic.glsl.frag  Basic.glsl.vert  Circle.glsl.frag  Circle.glsl.vert  CubemapSampler.glsl.frag  Default.glsl.frag  Default.glsl.vert  Depth.glsl.vert  FullScreenQuad.glsl.vert  GBuffer.glsl.frag  ID.glsl.frag  IrradianceConvolution.glsl.frag  Line.glsl.frag  Main.glsl.frag  PBR.glsl.frag  PhongLight.glsl.frag  PreethamSky.glsl.frag  PreethamSky.glsl.vert  Prefiltered.glsl.frag  Prefiltered.glsl.vert  SceneComposite.glsl.vert  Solid.glsl.frag  Texture.glsl.frag  Texture.glsl.vert
ChozoEditor/resources/shaders/Common/: BRDF.glsl  GBuffer.glsl  Lighting.glsl  Math.glsl  Varyings.glsl
ChozoEditor/resources/shaders/includes/: Cubemap.glsl  CubemapLayout.glsl  FullScreenQuad.glsl  PBRAlgorithms.glsl  PBRLight.glsl  Scene.glsl
ChozoEditor/src/: CameraController.cpp  CameraController.h  ChozoEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
ChozoEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentItem.cpp  ContentItem.h  EnvironmentPanel.cpp  EnvironmentPanel.h  MaterialPanel.cpp  MaterialPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  PropertyUI.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TexturePreviewPanel.cpp  TexturePreviewPanel.h  TextureViewerPanel.cpp  TextureViewerPanel.h
ChozoEditor/src/Panels/ContentBrowser/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentItem.cpp  ContentItem.h  ContentSelection.cpp  ContentSelection.h
ChozoEditor/src/Thumbnail/: ThumbnailManager.cpp  ThumbnailManager.h  ThumbnailPoolTask.cpp  ThumbnailPoolTask.h  ThumbnailRenderer.cpp  ThumbnailRenderer.h
ChozoEngine/: CMakeLists.txt
ChozoEngine/Platform/Mac/: MacPlatformUtils.cpp  MacPlatformUtils.mm  MacThread.cpp
ChozoEngine/shaders/: BrdfLUT.glsl.frag  Circle.glsl.vert  CubemapSampler.glsl.frag  Debug.glsl.frag  Depth.glsl.frag  GBuffer.glsl.frag  GBuffer.glsl.vert  IrradianceConvolution.glsl.frag  Main.glsl.frag  PBR.glsl.frag  Phong.glsl.frag  Prefiltered.glsl.frag  SceneComposite.glsl.frag  Skybox.glsl.frag  Skybox.glsl.vert  Solid.glsl.frag  Texture.glsl.frag
ChozoEngine/shaders/Common/: CubemapSampler.glsl.vert  FullScreenQuad.glsl.vert  Model.glsl.vert
ChozoEngine/shaders/Includes/: BRDF.glsl  GBuffer.glsl  Material.glsl  Math.glsl  PBRAlgorithms.glsl  PBRLighting.glsl  ShadingParameters.glsl
ChozoEngine/shaders/Snippets/Fragment/: Light.glsl  Scene.glsl
ChozoEngine/shaders/Snippets/Layout/: CubemapLayout.glsl  ModelLayout.glsl  QuadLayout.glsl
ChozoEngine/shaders/Snippets/Vertex/: Cubemap.glsl  Model.glsl
ChozoEngine/src/: Chozo.h  czpch.h  prxpch.h
ChozoEngine/src/Backend/OpenGL/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.h  OpenGLUtils.h
ChozoEngine/src/Chozo/: Application.cpp  Application.h  EntryPoint.h  FmtFormatter.h  Layer.cpp  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
ChozoEngine/src/Chozo/Asset/: Asset.h  AssetExtensions.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegistrySerializer.cpp  AssetRegistrySerializer.h  AssetSerializer.cpp  AssetSerializer.h  AssetType.h  EditorAssetManager.cpp  EditorAssetManager.h
ChozoEngine/src/Chozo/Core/: Application.cpp  Application.h  Base.h  Buffer.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseButtonCodes.h  ObservableProperty.h  Observer.cpp  Observer.h  Pool.cpp  Pool.h  PoolTask.h  Ref.cpp  Ref.h  Thread.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
ChozoEngine/src/Chozo/Debug/: FmtFormatter.h  Log.cpp  Log.h
ChozoEngine/src/Chozo/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  RenderEvent.h
ChozoEngine/src/Chozo/FileSystem/: AssimpLoader.cpp  AssimpLoader.h  FileStream.cpp  FileStream.h  GLTFLoader.cpp  GLTFLoader.h  MeshImporter.cpp  MeshImporter.h  MeshLoader.h  PBRMaterialProps.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  TextureExporter.cpp  TextureExporter.h  TextureImporter.cpp  TextureImporter.h
ChozoEngine/src/Chozo/ImGui/: Colors.h  CustomTreeNode.cpp  CustomTreeNode.h  ImGuiKeyCodes.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUI.h
ChozoEngine/src/Chozo/Math/: AABB.h  Math.cpp  Math.h
ChozoEngine/src/Chozo/Project/: Project.cpp  Project.h
ChozoEngine/src/Chozo/Renderer/: Batch.cpp  Batch.h  Buffer.cpp  Buffer.h  Camera.h  DataStructs.h  EditorCamera.cpp  EditorCamera.h  Environment.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Image.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererTypes.h  SceneRenderer.h  (+11 more)
ParallaxEngine/: CMakeLists.txt
ParallaxEngine/src/: Parallax.h  prxpch.cpp  prxpch.h
ParallaxEngine/src/Parallax/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  FmtFormatter.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Sandbox/: CMakeLists.txt  vcpkg.json
Sandbox/src/: SandboxApp.cpp  SandboxApp.h
(+153 files in other folders)
